5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1635_2447.log
== TEST (2019-04-10 13:48:26) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if():

-- ERROR:
File "XXXX", line 6
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:50:52) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   m="falta x",z
else:
	m= "troco de y"
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:51:13) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   m="falta x",z
else:
	m= "troco de y"
print(m)
-- EXECUTION TIME:
0.13028
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:51:30) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   m="falta x",z
else:
	m= "troco de y",w
print(m)
-- EXECUTION TIME:
0.157642
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:51:33) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   m="falta x",z
else:
	m= "troco de y",w
print(m)
-- EXECUTION TIME:
0.172382
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:52:25) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   m="falta x",z
else:
	m= "troco de y",w
print(round(m,2))
-- EXECUTION TIME:
0.136264
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:52:28) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   m="falta x",z
else:
	m= "troco de y",w
print(round(m,2))
-- EXECUTION TIME:
0.210962
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:52:28) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   m="falta x",z
else:
	m= "troco de y",w
print(round(m,2))
-- EXECUTION TIME:
0.125035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:52:28) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   m="falta x",z
else:
	m= "troco de y",w
print(round(m,2))
-- EXECUTION TIME:
0.273287
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '516.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:52:29) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   m="falta x",z
else:
	m= "troco de y",w
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:54:02) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   m="falta "+ x,z
else:
	m= "troco de" +y,w
print(round(m,2))
-- EXECUTION TIME:
0.134231
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:54:03) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   m="falta "+ x,z
else:
	m= "troco de" +y,w
print(round(m,2))
-- EXECUTION TIME:
0.156731
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:55:18) 
-- CODE:
x=int(input(""))
y=int(input(""))
z= x-y
w= y-x
if(x>y):
   m="falta "+ x,z
else:
	m= "troco de" +y,w
print(round(m,2))
-- EXECUTION TIME:
0.150095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:58:23) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=x-y
w=y-x
if(x>y):
   print("falta", round(z,2))
else:
   print("troco de", round(w,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:58:24) 
-- CODE:
x=int(input(""))
y=int(input(""))
z=x-y
w=y-x
if(x>y):
   print("falta", round(z,2))
else:
   print("troco de", round(w,2))
-- EXECUTION TIME:
0.178455
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 1, in <module>
    x=int(input(""))
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:59:38) 
-- CODE:
x=float(input(""))
y=float(input(""))
z=x-y
w=y-x
if(x>y):
   print("falta", round(z,2))
else:
   print("troco de", round(w,2))
-- EXECUTION TIME:
0.168515
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:59:40) 
-- CODE:
x=float(input(""))
y=float(input(""))
z=x-y
w=y-x
if(x>y):
   print("falta", round(z,2))
else:
   print("troco de", round(w,2))
-- EXECUTION TIME:
0.170983
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:59:40) 
-- CODE:
x=float(input(""))
y=float(input(""))
z=x-y
w=y-x
if(x>y):
   print("falta", round(z,2))
else:
   print("troco de", round(w,2))
-- EXECUTION TIME:
0.157638
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
troco de 28.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:59:40) 
-- CODE:
x=float(input(""))
y=float(input(""))
z=x-y
w=y-x
if(x>y):
   print("falta", round(z,2))
else:
   print("troco de", round(w,2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:59:57) 
-- CODE:
x=float(input(""))
y=float(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   print("falta", round(z,2))
else:
   print("troco de", round(w,2))
-- EXECUTION TIME:
0.125055
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:59:57) 
-- CODE:
x=float(input(""))
y=float(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   print("falta", round(z,2))
else:
   print("troco de", round(w,2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:00:15) 
-- CODE:
x=float(input(""))
y=float(input(""))
z=(x-y)
w=(y-x)
if(x>y):
   print("Falta", round(z,2))
else:
   print("Troco de", round(w,2))
-- EXECUTION TIME:
0.250548
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
